Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113558

QQuickWidget does not handle touch event via QML TapHandler correctly

XMLWordPrintable

    • Windows
    • 59b0b5909 (dev), 9f85654f7 (6.7), 0c5a04ee7 (6.6), 2aead3316 (tqtc/lts-6.5)

      Reproducer attached. Touch screen is required. Only tested on external screen connected via USB cable.

      Steps to reproduce:
      1. Run the sample on Windows + 6.5.0 (6.4.x reproduces too). By default, MyQuickWidget is in use. Attribute 'Qt::WA_AcceptTouchEvents' is also set to true.
      2. Click the window, and it can be seen that TapHandler outputs 'Tap'. But touching does not make Taphandler output anything.
      3. On the other hand, MyQuickView works perfectly. Uncomment '#define QUICKVIEW' and switch to MyQuickView, do the same clicking and touching test, and it can be observed that both clicking and touching make Taphandler outputs 'Tap'.

      I am using 'MyQuickXXXX' subclassed from 'QQuickXXXX' just to confirm if events are correctly delivered by overriding only 'event' method. And the outputs prove that clicking/touching does reach to MyQuickWidget. The same test can be done by using QQuickXXXX, and the result is the same - TapHandler does not output anything for touching.

        1. Reproducer.zip
          6 kB
          Luqiao Chen
        For Gerrit Dashboard: QTBUG-113558
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            luqiaochen Luqiao Chen
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: